{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 47,
  "lineage": "610057f9-ddd6-e9fe-ebe6-9edcf3effa06",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875525659788:internet-gateway/igw-0c9b863ece71b7957",
            "id": "igw-0c9b863ece71b7957",
            "owner_id": "875525659788",
            "tags": {
              "Name": "myigw"
            },
            "tags_all": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-0f2d3b20244244a71"
          },
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:875525659788:loadbalancer/app/app-lb/2a30cffb04ab2270",
            "arn_suffix": "app/app-lb/2a30cffb04ab2270",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-874314218.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:875525659788:loadbalancer/app/app-lb/2a30cffb04ab2270",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01f9b06e024611de1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a8c2be36d090b9a"
              },
              {
                "subnet_id": "subnet-0a955e8e76f3137ee"
              }
            ],
            "subnets": [
              "subnet-02a8c2be36d090b9a",
              "subnet-0a955e8e76f3137ee"
            ],
            "vpc_id": "vpc-0f2d3b20244244a71",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg2",
            "aws_subnet.pub-a",
            "aws_subnet.pub-b",
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:875525659788:listener/app/app-lb/2a30cffb04ab2270/b58da9b7f1c8988b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:875525659788:targetgroup/tg-group/d23cf4da12bfdf4a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:875525659788:listener/app/app-lb/2a30cffb04ab2270/b58da9b7f1c8988b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:875525659788:loadbalancer/app/app-lb/2a30cffb04ab2270",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_target_group.tg-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:875525659788:targetgroup/tg1-group/56e6019fba682274",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:875525659788:listener-rule/app/app-lb/2a30cffb04ab2270/b58da9b7f1c8988b/1ed18d3b195c3250",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/index.html"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [
                  {
                    "key": "health",
                    "value": "check"
                  }
                ],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:875525659788:listener-rule/app/app-lb/2a30cffb04ab2270/b58da9b7f1c8988b/1ed18d3b195c3250",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:875525659788:listener/app/app-lb/2a30cffb04ab2270/b58da9b7f1c8988b",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_listener.lb-listener",
            "aws_lb_target_group.tg-group",
            "aws_lb_target_group.tg1-group",
            "aws_security_group.sg2",
            "aws_subnet.pub-a",
            "aws_subnet.pub-b",
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:875525659788:targetgroup/tg-group/d23cf4da12bfdf4a",
            "arn_suffix": "targetgroup/tg-group/d23cf4da12bfdf4a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:875525659788:targetgroup/tg-group/d23cf4da12bfdf4a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f2d3b20244244a71"
          },
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg1-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:875525659788:targetgroup/tg1-group/56e6019fba682274",
            "arn_suffix": "targetgroup/tg1-group/56e6019fba682274",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:875525659788:targetgroup/tg1-group/56e6019fba682274",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg1-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f2d3b20244244a71"
          },
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routeigm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875525659788:route-table/rtb-0bb1931bb0e2f19d2",
            "id": "rtb-0bb1931bb0e2f19d2",
            "owner_id": "875525659788",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c9b863ece71b7957",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c9b863ece71b7957",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2d3b20244244a71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fda933e0aa5b531",
            "route_table_id": "rtb-0bb1931bb0e2f19d2",
            "subnet_id": "subnet-0a955e8e76f3137ee"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.routeigm",
            "aws_subnet.pub-a",
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068345e9d06fb7858",
            "route_table_id": "rtb-0bb1931bb0e2f19d2",
            "subnet_id": "subnet-02a8c2be36d090b9a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.routeigm",
            "aws_subnet.pub-b",
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875525659788:security-group/sg-01f9b06e024611de1",
            "description": "Port tcp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outboun",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f9b06e024611de1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "server-alb",
            "name_prefix": "",
            "owner_id": "875525659788",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f2d3b20244244a71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875525659788:security-group/sg-035a33f4994e3e088",
            "description": "Port ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outboun",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035a33f4994e3e088",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port ",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "final-securitygroup",
            "name_prefix": "",
            "owner_id": "875525659788",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f2d3b20244244a71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875525659788:subnet/subnet-0a955e8e76f3137ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "145.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a955e8e76f3137ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "875525659788",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public -a1"
            },
            "tags_all": {
              "Name": "public -a1"
            },
            "vpc_id": "vpc-0f2d3b20244244a71"
          },
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875525659788:subnet/subnet-02a8c2be36d090b9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "145.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a8c2be36d090b9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "875525659788",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public -b1"
            },
            "tags_all": {
              "Name": "public -b1"
            },
            "vpc_id": "vpc-0f2d3b20244244a71"
          },
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "createVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875525659788:vpc/vpc-0f2d3b20244244a71",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "145.0.0.0/16",
            "default_network_acl_id": "acl-0a2d6839cd2dded89",
            "default_route_table_id": "rtb-04fd3aeda6c847ffa",
            "default_security_group_id": "sg-07964da7104076ce0",
            "dhcp_options_id": "dopt-0fdc7e3a15c4ccc4b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f2d3b20244244a71",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04fd3aeda6c847ffa",
            "owner_id": "875525659788",
            "tags": {
              "Name": "myterraformvpc"
            },
            "tags_all": {
              "Name": "myterraformvpc"
            }
          }
        }
      ]
    }
  ]
}